# Open-Med-VisionX

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  SECURITY.md  environment.yml  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CUSTOM_MODELS.md  CUSTOM_MODELS.zh-CN.md  DATA_FORMATS.md  DATA_FORMATS.zh-CN.md  GLOSSARY.md  GLOSSARY.zh-CN.md  INDEX.md  INDEX.zh-CN.md  INTRODUCTION.md  LLM_SECURITY.md  LLM_SECURITY.zh-CN.md  MODEL_BUNDLES.md  MODEL_BUNDLES.zh-CN.md  PLUGIN_DEVELOPMENT.md  QUICKSTART.md  QUICKSTART.zh-CN.md  README.zh-CN.md  SECURITY.zh-CN.md  TEACHING_CURRICULUM.md  TEACHING_CURRICULUM.zh-CN.md  TROUBLESHOOTING.md  TROUBLESHOOTING.zh-CN.md  USER_GUIDE.md  USER_GUIDE.zh-CN.md
requirements/: model-conversion.txt  torch-cpu.txt  torch-cu130.txt
scripts/: check_repository.py
scripts/data_conversion/: __init__.py  extract_lodopab_sample.py  fetch_lodopab_members.py
scripts/model_conversion/: ENVIRONMENT.md  __init__.py  _modules.py  convert_deepinv_mri.py  convert_dival_fbpunet.py  verify_monai_torchscript.py
src/dicom_viewer/: __init__.py  app.py  py.typed
src/dicom_viewer/algorithms/: __init__.py  base.py  metrics.py  reconstruction.py
src/dicom_viewer/domain/: __init__.py  geometry.py  images.py  transforms.py
src/dicom_viewer/inference/: _adapter_worker.py  manifest.py  plugin.py  preprocessing.py  python_adapter.py  results.py  standard_runtimes.py
src/dicom_viewer/io/: __init__.py  dicom.py  nifti.py
src/dicom_viewer/llm/: __init__.py  providers.py  (+1 more)
src/workbench/: errors.py
tests/: __init__.py  test_advanced_evaluation_metrics.py  test_algorithms.py  test_assistant_artifacts_ui.py  test_brats_experiment_record.py  test_brats_installer_ui.py  test_brats_segmentation.py  test_brats_validator.py  test_bundled_model_demos.py  test_bundled_models.py  test_bundled_models_ui.py  test_dicom_annotation_ui.py  test_dicom_annotations.py  test_dicom_enhanced.py  test_dicom_loader.py  test_dicom_series_discovery.py  test_dicom_series_ui.py  test_dicom_study_bridge.py  test_documentation_contract.py  test_domain.py  test_evaluation_workspace.py  test_evaluation_workspace_ui.py  test_experiments.py  test_image_view_interaction.py  test_imaging_service.py  test_inference_execution.py  test_label_map_import.py  test_llm.py  test_llm_artifacts.py  test_medical_loaders.py  test_nifti_loader.py  test_raster_loader.py  test_raster_tiles.py  test_runtime.py  test_segmentation_resampling.py  test_service_boundaries.py  test_spatial_geometry.py  test_study_layers.py  test_study_layers_ui.py  test_teaching_cases.py  (+3 more)
(+112 files in other folders)
