[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmedvisionx"
version = "0.1.0"
description = "An Open Interactive Platform for Medical Computer Vision Learning and Exploration"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "OpenMedVisionX contributors" },
]
keywords = [
  "dicom",
  "nifti",
  "medical-imaging",
  "computed-tomography",
  "computer-vision",
  "education",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "numpy>=1.26",
  "pydicom>=2.4",
  "Pillow>=10",
  "PyYAML>=6",
  "PyQt5>=5.15",
  "scipy>=1.11",
  "scikit-image>=0.22",
]

[project.optional-dependencies]
# The default project dependencies are the lightweight base viewer. This
# explicit alias makes the documented dependency group installable as [base].
base = []
nifti = [
  "nibabel>=5.2",
]
onnx = [
  "onnx>=1.15",
  "onnxruntime>=1.16",
]
pytorch-plugin = [
  "torch>=2.1",
]
llm = [
  "keyring>=24",
]
dev = [
  "build>=1.2",
  "detect-secrets>=1.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-qt>=4.4",
  "ruff>=0.5",
  "twine>=5",
]

[project.scripts]
openmedvisionx = "dicom_viewer.app:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["dicom_viewer.inference.tests*"]

[tool.setuptools.package-data]
"dicom_viewer" = ["py.typed"]
"dicom_viewer.inference" = ["examples/*.yaml"]

[tool.setuptools.data-files]
"share/openmedvisionx/figs" = ["figs/logo_pure.png", "figs/logo_full.png"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests", "src/dicom_viewer/inference/tests"]
qt_api = "pyqt5"

[tool.coverage.run]
branch = true
source = ["dicom_viewer"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
packages = ["dicom_viewer"]
mypy_path = "src"
